--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "playwright": "^1.40.0"
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.202.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.202.0",
+    "@opentelemetry/sdk-trace-node": "^2.0.1",
+    "flowise-components": "^3.0.3",
+    "playwright": "^1.40.0",
+    "turndown": "^7.2.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0"
