--- a/mcp-nest-servicebus-relay/package.json
+++ b/mcp-nest-servicebus-relay/package.json
@@ -26,7 +26,8 @@
     "@nestjs/platform-express": "^11.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
