--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ google-profile/
 patchright-profile/
 infra-relayMcpServer/_admin-notes.txt
 relay-mcp-server.zip
+bfg-replace-secrets.txt
+bfg-replace-secrets.txt
